--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -7,9 +7,10 @@
 
 {% if formset.forms %}
 <div class="section">
-<div class="header">
-  <h2>Messages from the developers</h2>
-  <div class="note"><div class="bubble pad-10">
+  <div class="header">
+    <h2>Messages from the developers</h2>
+  </div>
+  <div class="section-content"><div class="note"><div class="bubble pad-10">
     The developers would like to thank you for using Mobile Oxford,
     and would like to ask your help in making it better.
   </div></div>
@@ -47,15 +48,15 @@
 </div>
 
 </form>
-
+</div>
 {% else %}
 
 <div class="section">
 <div class="header">
   <h2>Messages from the developers</h2>
-  <div class="note"><div class="bubble pad-10">
+  <div class="section-content"><div class="note"><div class="bubble pad-10">
     You have no messages
-  </div></div>
+  </div></div></div>
 </div>
 </div>
 
