--- a/molly/apps/contact/templates/contact/search_form.html
+++ b/molly/apps/contact/templates/contact/search_form.html
@@ -1,25 +1,19 @@
 {# Search form #}
 
 <div class="section">
-<div class="header">
   <form method="get" action="{% url contact:result_list %}">
-    <div class="form">
-      <h2>
-        <label for="id_query">Search</label>
-      </h2>
-    </div>
-    <div class="section-content">
-      <p>
-        {{ form.query }}
-      </p>
-      <p>
-  {% for medium in medium_choices %}
+  <div class="header">
+    <h2><label for="id_query">Search</label></h2>
+  </div>
+  <div class="form">
+    <p>{{ form.query }}</p>
+    <p>
+      {% for medium in medium_choices %}
         <button type="submit" name="medium" value="{{ medium.0 }}">{{ medium.1|capfirst }}</button>
-  {% endfor %}
-      </p>
-    </div>
+      {% endfor %}
+    </p>
+  </div>
   </form>
-</div>
 </div>
 
 
