--- a/molly/apps/search/templates/search/index.html
+++ b/molly/apps/search/templates/search/index.html
@@ -58,8 +58,8 @@
 {# End Results Page #}
 
 {# Universal Search Form #}
-<div class="section">
-<div class="header">
+<div class="section header">
+
 <div class="form">
   
     <h2>
@@ -72,7 +72,6 @@
       </p>
 	  <p><input type="submit" value="Go!"/></p>
   </form>
-</div>
 </div>
 </div>
 
