--- a/molly/apps/search/templates/search/index.html
+++ b/molly/apps/search/templates/search/index.html
@@ -58,7 +58,7 @@
 {# End Results Page #}
 
 {# Universal Search Form #}
-<div class="section header">
+<div class="form-section">
 
 <div class="form">
   
