--- a/molly/apps/search/templates/search/index.html
+++ b/molly/apps/search/templates/search/index.html
@@ -1,9 +1,28 @@
-{% extends "search/base.html" %}
+{% extends "search/base.html" %}{% load molly_apps_search %}
 
 {% block pagetitle %}Search{% endblock %}
 {% block title %}m.ox | Search{% if results %}: {{ search_form.data.query }}{% endif %}{% endblock %}
 
 {% block content %}
+
+{% search_form %}
+<form method="get" action="{% url search:index %}">
+    <!-- Doing the devil's work below: couldn't get a CSS design to work with Blackberry 8900 so using Tables as a last resort. Tim F -->
+<h2 class="invisible">Search</h2>    
+<table class="search"><tbody>
+        <tr><td>
+                <label style="display:none;" for="id_query">Search Box</label>
+                {{ search_form.query }}
+        </td><td>
+                {% ifequal style_group "groups-dumb" %}
+                    <button type="submit">Go!</button>
+                {% else %}
+                	<input type="image" src="{{ MEDIA_URL }}site/png/new/buttons/search-button.png" title="Search" alt="Search" />
+                {% endifequal %}
+        </td></tr>    
+        </tbody>
+</table>
+</form>
 
 {# Results Page #}
 {% if search_form.is_valid %}
@@ -56,26 +75,5 @@
 
 {% endif %}
 {# End Results Page #}
-
-{# Universal Search Form #}
-<div class="form-section">
-
-<div class="form">
-  
-    <h2>
-      {{ search_form.query.label }}{% if search_form.application %} {{ search_form.cleaned_data.application }}{% endif %}
-    </h2>
-
-  <form method="get" action="">
-      <p>
-        {{ search_form.query }}{{ search_form.application }}
-      </p>
-	  <p><input type="submit" value="Go!"/></p>
-  </form>
-</div>
-</div>
-
-{# End Universal Search Form #}
-
 
 {% endblock %}
