--- a/molly/apps/contact/templates/contact/search_form.html
+++ b/molly/apps/contact/templates/contact/search_form.html
@@ -1,10 +1,10 @@
 {# Search form #}
 
-<div class="section">
+<div class="form-section">
   <form method="get" action="{% url contact:result_list %}">
-  <div class="header">
+
     <h2><label for="id_query">Search</label></h2>
-  </div>
+
   <div class="form">
     <p>{{ form.query }}</p>
     <p>
