--- a/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/apps/sakai/templates/sakai/signup/list.html
@@ -1,4 +1,4 @@
-{% extends "sakai/base.html" %}{% load molly_utils %}
+{% extends "sakai/base.html" %}{% load molly_utils %}{% load oxford_term_dates %}
 
 {% block pagetitle %}Meetings{% endblock %}
 
