MOX-146 news items were styled to all be contained in the header div

--- a/molly/apps/feeds/templates/rss/news/item_detail.html
+++ b/molly/apps/feeds/templates/rss/news/item_detail.html
@@ -18,7 +18,8 @@
   <div class="header">
     <h2>{{ item.title }}</h2>
   </div>
-    <div style="font-size:1em; line-height:1.1em;">
+  
+    <div class="section-content">
     {{ description|safe }}
     <br />
         <small><em>
