Change feed template extends to reflect reorganisation

--- a/molly/apps/feeds/templates/feeds/events/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/events/item_detail.html
@@ -1,4 +1,4 @@
-{% extends "rss/events/base.html" %}{% load molly_maps %}
+{% extends "feeds/events/base.html" %}{% load molly_maps %}
 
 {% block breadcrumbs %}
 {{ block.super }}
