--- a/molly/apps/sakai/templates/sakai/permission_denied.html
+++ b/molly/apps/sakai/templates/sakai/permission_denied.html
@@ -7,7 +7,7 @@
         <h2>Permission Denied</h2>
     </div>
     <div class="section-content">
-        <p>You don't have permission to see this poll.</p>
+        <p>You don't have permission to see this item.</p>
     </div>
 </div>
 
