Add JS to update_location page

--- a/molly/geolocation/templates/geolocation/update_location.html
+++ b/molly/geolocation/templates/geolocation/update_location.html
@@ -1,5 +1,7 @@
 {% extends "geolocation/base.html" %}
 
+{% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
+
 {% block content %}
 
 {% include "geolocation/update_location_embed.html" %}
