Apparently MEDIA_URL is supposed to be for upload media, and STATIC_URL for collected/serving media. And the new version of django-staticfiles really doesn't like it if it's the same, so we have to use STATIC_URL for our collected media.

--- a/molly/apps/feeds/templates/feeds/news/index.html
+++ b/molly/apps/feeds/templates/feeds/news/index.html
@@ -16,7 +16,7 @@
                 {% ifequal style_group "dumb" %}
                     <button type="submit">Go!</button>
                 {% else %}
-                	<input type="image" src="{{ MEDIA_URL }}site/png/new/buttons/search-button.png" title="Search" alt="Search"/>
+                	<input type="image" src="{{ STATIC_URL }}site/png/new/buttons/search-button.png" title="Search" alt="Search"/>
                 {% endifequal %}
         </td></tr><tr><td>
                 <p class="help-bubble top">Search for particular news articles</p>
