--- a/molly/apps/feeds/templates/feeds/news/item_list.html
+++ b/molly/apps/feeds/templates/feeds/news/item_list.html
@@ -3,7 +3,7 @@
 {% block breadcrumbs %}
 {{ block.super }}
             <li><a href="{% url rss_index %}">
-                <img src="{{ MEDIA_URL }}png/index-icons/rss-bc.png" alt="News"/>
+                <img src="{{ STATIC_URL }}png/index-icons/rss-bc.png" alt="News"/>
             </a></li>
 {% endblock %}
 
