--- a/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/apps/podcasts/templates/podcasts/index.html
@@ -37,7 +37,7 @@
                 {% ifequal style_group "groups-dumb" %}
                     <button type="submit">Go!</button>
                 {% else %}
-                	<input type="image" src="{{ MEDIA_URL }}site/png/new/buttons/search-button.png" title="Search" alt="Search"/>
+                	<input type="image" src="{{ STATIC_URL }}site/png/new/buttons/search-button.png" title="Search" alt="Search"/>
                 {% endifequal %}
         </td></tr><tr><td>
                 <p class="help-bubble top">Try searching for a podcast by subject, name or author</p>
