--- a/molly/apps/sakai/templates/sakai/poll/detail.html
+++ b/molly/apps/sakai/templates/sakai/poll/detail.html
@@ -84,7 +84,7 @@
           </label>
 {% else %}
           {% if option.votedFor %}
-            <img src="{{ MEDIA_URL }}sakai-polls/png/voted.png" alt="&#10007;"/>
+            <img src="{{ STATIC_URL }}sakai-polls/png/voted.png" alt="&#10007;"/>
           {% endif %}
 {% endif %}
         </td>
