--- a/molly/maps/templates/maps/touchmaplite/map.html
+++ b/molly/maps/templates/maps/touchmaplite/map.html
@@ -23,7 +23,7 @@
         <script type="text/javascript"> 
             // <![CDATA[
             
-            var mediaUrl = "{{ MEDIA_URL|escapejs }}";
+            var mediaUrl = "{{ STATIC_URL|escapejs }}";
             
             var touchMap = null;
              
