--- a/molly/apps/desktop/templates/desktop/index.html
+++ b/molly/apps/desktop/templates/desktop/index.html
@@ -3,15 +3,15 @@
 <head>
 <title>Mobile Oxford</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/screen.css"
+<link rel="stylesheet" href="{{ STATIC_URL }}blueprint/screen.css"
 	type="text/css" media="screen,projection" />
-<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/print.css"
+<link rel="stylesheet" href="{{ STATIC_URL }}blueprint/print.css"
 	type="text/css" media="print" />
 <!--[if IE]>
-    <link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/ie.css" type="text/css" media="screen,projection"/>
+    <link rel="stylesheet" href="{{ STATIC_URL }}blueprint/ie.css" type="text/css" media="screen,projection"/>
     <![endif]-->
 {% compressed_css "jquery.lightbox-0.5" %}
-<link rel="shortcut icon" href="{{ MEDIA_URL }}desktop/png/favicon.png" />
+<link rel="shortcut icon" href="{{ STATIC_URL }}desktop/png/favicon.png" />
 
 <style type="text/css">
 
@@ -184,7 +184,7 @@ ul.feature-link-list li {
 }
 
 a#wireless-setup {
-    background-image: url('{{ MEDIA_URL }}desktop/png/eduroam.png');
+    background-image: url('{{ STATIC_URL }}desktop/png/eduroam.png');
     background-position: center left;
     background-repeat: no-repeat;
     padding: 8px 5px 8px 95px; 
@@ -223,14 +223,14 @@ img.shadow {
 <div class="container">
 <div class="span-44 background">
 <div class="span-36 prepend-top">
-<h1><img class="logo" src="{{ MEDIA_URL }}desktop/png/logo.png"
+<h1><img class="logo" src="{{ STATIC_URL }}desktop/png/logo.png"
 	alt="Mobile Oxford" /></h1>
 
 <p class="strap-line">Your university
 and city on the move</p>
 </div>
 <div class="span-7 append-1 last"><img class="brandmark"
-	src="{{ MEDIA_URL }}desktop/gif/brandmark.gif" width="115" height="115"
+	src="{{ STATIC_URL }}desktop/gif/brandmark.gif" width="115" height="115"
 	alt="University of Oxford" /></div>
 
 <div class="prepend-1 span-42 append-1 last">
@@ -268,21 +268,21 @@ using your mobile device's web browser, <a class="preview-link"
 a 2D barcode below 
 <br/>
 <a class="lightbox"
-	href="{{ MEDIA_URL }}desktop/png/barcodes/qrcode.png" title="QR Code"> <img
-	src="{{ MEDIA_URL }}desktop/png/barcodes/qrcode-small.png" alt="QR Code" /></a> <a
-	class="lightbox" href="{{ MEDIA_URL }}desktop/png/barcodes/datamatrix.png"
+	href="{{ STATIC_URL }}desktop/png/barcodes/qrcode.png" title="QR Code"> <img
+	src="{{ STATIC_URL }}desktop/png/barcodes/qrcode-small.png" alt="QR Code" /></a> <a
+	class="lightbox" href="{{ STATIC_URL }}desktop/png/barcodes/datamatrix.png"
 	title="DataMatrix Code"> <img
-	src="{{ MEDIA_URL }}desktop/png/barcodes/datamatrix-small.png"
+	src="{{ STATIC_URL }}desktop/png/barcodes/datamatrix-small.png"
 	alt="DataMatrix Code" /></a> <a class="lightbox"
-	href="{{ MEDIA_URL }}desktop/png/barcodes/mstag.png" title="Microsoft Tag"> <img
-	src="{{ MEDIA_URL }}desktop/png/barcodes/mstag-small.png" alt="Microsoft Tag" /></a>
+	href="{{ STATIC_URL }}desktop/png/barcodes/mstag.png" title="Microsoft Tag"> <img
+	src="{{ STATIC_URL }}desktop/png/barcodes/mstag-small.png" alt="Microsoft Tag" /></a>
 </p>
 </div>
 </div>
 </div>
 
 <div class="span-24 append-1 last align-center"><img
-    src="{{ MEDIA_URL }}desktop/png/phones.png" height="500" width="450"
+    src="{{ STATIC_URL }}desktop/png/phones.png" height="500" width="450"
     alt="Various phones showing Mobile Oxford" />
     </div>
 
@@ -395,7 +395,7 @@ Learn how to use Eduroam</a></p>
 </div>
 
 <div class="span-16 align-center">
-<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/instant-info.png" alt="Instant Info Screenshot">
+<img class="shadow" src="{{ STATIC_URL }}desktop/png/features/instant-info.png" alt="Instant Info Screenshot">
 <p>The Instant Info section on the front page</p>
 </div>
 
@@ -469,31 +469,31 @@ Learn how to use Eduroam</a></p>
 	</div>
 	<hr />
 	<div id="postbox" class="span-10 align-center">
-	   <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/places-postboxes.png" />
-	   <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/places-postboxes-collection-times.png" />
+	   <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/places-postboxes.png" />
+	   <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/places-postboxes-collection-times.png" />
 	   <p>Find your nearest post box and even the collection time (for most postboxes inside the ring road).</p>
 	</div>
 	<div class="span-10 align-center append-1 last">
-	   <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/places-punts.png" />
+	   <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/places-punts.png" />
 	   <p>Places to go punting from</p>
 	</div>
 	</div>
 	<div id="bus" class="span-20 last">
 	   <h4>How to find things near you</h4>
 	<div class="span-9 prepend-1 align-center">
-	   <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/places-1.png" />
+	   <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/places-1.png" />
 	   <p>1. Let your phone find position, or enter it in.</p>
 	</div>
 	<div class="span-9 append-1 align-center last">
-	   <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/places-2.png" />
+	   <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/places-2.png" />
        <p>2. Find things nearby.</p>
     </div>
     <div class="span-9 prepend-1 align-center">
-        <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/places-3.png" />
+        <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/places-3.png" />
         <p>3. Select a category.</p>
     </div>
 	<div class="span-9 append-1 align-center last">
-	   <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/places-4.png" />
+	   <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/places-4.png" />
        <p>4. Get information about the place, including real time bus times at bus stops!</p>
 	</div>
 	</div>  
@@ -511,15 +511,15 @@ Learn how to use Eduroam</a></p>
     <p><small>*Be aware that you may not have access to all libraries (especially those contained in colleges).</small></p>
     </div>
     <div class="span-10 align-center prepend-top">
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/library-search-1.png" alt="Library Search box" />
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/library-search-1.png" alt="Library Search box" />
     <p>1. Search for a book</p>
     </div>
     <div class="span-10 align-center prepend-top">
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/library-search-2.png" alt="Library Search results" />
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/library-search-2.png" alt="Library Search results" />
     <p>2. Find the right edition</p>
     </div>
     <div class="span-10 align-center last prepend-top">
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/library-search-3.png" alt="Library Search Map Results" />
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/library-search-3.png" alt="Library Search Map Results" />
     <p>3. See where you can find the book in relation to you.
     </div>
     </div>
@@ -543,22 +543,22 @@ Learn how to use Eduroam</a></p>
     
     <div id="weblearn-oauth-login" class="span-42 align-center">
     <div class="span-10 prepend-1">
-        <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weblearn-1.png" />
+        <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/weblearn-1.png" />
         <p>1.The first page in the one-time authorisation process</p>
     </div>
     
     <div class="span-10">
-        <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weblearn-2.png" />
+        <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/weblearn-2.png" />
         <p>2. Select your appropriate account type. <em>NB: Whenever logging into any service, make sure the URL (the address) is one you recognise.</em></p>
     </div>
     
     <div class="span-10">
-        <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weblearn-3.png" />
+        <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/weblearn-3.png" />
         <p>3. WebLearn then asks you to confirm that you want to be able to access WebLearn through Mobile Oxford.</p> 
     </div>
     
     <div class="span-10 append-1 last">
-        <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weblearn-4.png" />
+        <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/weblearn-4.png" />
         <p>4. Then you can book events!</p>
     </div>  
     </div> 
@@ -576,7 +576,7 @@ Learn how to use Eduroam</a></p>
     including welfare, emergency and University services.</p>
 </div>
 <div class="span-10 colborder">
-<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/contact-search.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
+<img class="shadow" src="{{ STATIC_URL }}desktop/png/features/contact-search.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
 </div>
 </div>
 <div id="webcams">
@@ -585,7 +585,7 @@ Learn how to use Eduroam</a></p>
     A selection of live web cams from around the city to fit your device's screen.  
 </div>
 <div class="span-11 append-1 last">
-<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/webcams.png" alt="Screenshot showing the Oxford Internet Institute Web cam overlooking St Giles, the Ashmolean and the Randolph Hotel." />
+<img class="shadow" src="{{ STATIC_URL }}desktop/png/features/webcams.png" alt="Screenshot showing the Oxford Internet Institute Web cam overlooking St Giles, the Ashmolean and the Randolph Hotel." />
 </div>
 </div>
 </div>
@@ -605,10 +605,10 @@ Learn how to use Eduroam</a></p>
     </div>
     
     <div class="span-16 align-center prepend-top ">
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/search.png" alt="Universal Search Box Screenshot">
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/search.png" alt="Universal Search Box Screenshot">
     <p>The 'Universal search' Box</p>
     <hr>
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/news-search.png" alt="News App Search Box Screenshot">
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/news-search.png" alt="News App Search Box Screenshot">
     <p>The search box found in the 'News' app</p>
     </div>
     
@@ -641,7 +641,7 @@ Learn how to use Eduroam</a></p>
     <h3>Weather</h3>
     <p>BBC Weather with a three day forecast and live observations from RAF Benson.</p>
     <div class="align-center">
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weather.png" alt="Weather Screenshot">
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/weather.png" alt="Weather Screenshot">
     <p>Weather</p> 
     </div>
 </div>
@@ -650,7 +650,7 @@ Learn how to use Eduroam</a></p>
     <h3>Results Releases</h3>
     <p>Want to know when your exam results have been released but don't want to keep logging into a computer? Check out Results Releases to see when your results have been released wherever you are.</p>
     <div class="align-center">
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/results-releases.png" alt="Results Releases App Screenshot">
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/results-releases.png" alt="Results Releases App Screenshot">
     <p>Results Releases</p> 
     </div>
 </div>    
@@ -659,7 +659,7 @@ Learn how to use Eduroam</a></p>
     <h3>Service Status</h3>
     <p>Check status updates from Computing Services and Library Services.</p>
     <div class="align-center">
-    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/service-status.png" alt="Service Status App Screenshot">
+    <img class="shadow" src="{{ STATIC_URL }}desktop/png/features/service-status.png" alt="Service Status App Screenshot">
     <p>Service Status</p> 
     </div>
 </div> 
@@ -677,7 +677,7 @@ Learn how to use Eduroam</a></p>
      
 </div>
 <div class="span-10 colborder">
-<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/news.png" alt="News Screenshot" />
+<img class="shadow" src="{{ STATIC_URL }}desktop/png/features/news.png" alt="News Screenshot" />
 </div>
 </div>
 <div id="podcasts">
@@ -687,7 +687,7 @@ Learn how to use Eduroam</a></p>
     <p><b>iPhone Tip:</b> When you click on 'podcasts' you will be asked whether you'd like to use your built in iTunes App to browse our podcasts. This gives you a few advantages like being able to queue downloads and store them in your library.</p>
 </div>
 <div class="span-11 append-1 last">
-<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/podcasts.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
+<img class="shadow" src="{{ STATIC_URL }}desktop/png/features/podcasts.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
 </div>
 </div>
 </div>
@@ -707,8 +707,8 @@ Learn how to use Eduroam</a></p>
 We use <a href="http://mollyproject.org/">The Molly Project</a>: an open souce community project. Get involved or deploy at your institution by visiting <a href="http://mollyproject.org/">http://mollyproject.org/</a>.</p>
 </div>
 <div class="span-12 last">
-<a href="http://www.oucs.ox.ac.uk/"><img src="{{ MEDIA_URL }}desktop/png/oucs-logo-small.png" width="140" height="46" alt="Oxford University Computing Services" /></a>
-<a href="http://jisc.ac.uk/"><img src="{{ MEDIA_URL }}desktop/png/jisc-logo-small.png" width="88" height="46" alt="Joint Information Systems Committee" /></a>
+<a href="http://www.oucs.ox.ac.uk/"><img src="{{ STATIC_URL }}desktop/png/oucs-logo-small.png" width="140" height="46" alt="Oxford University Computing Services" /></a>
+<a href="http://jisc.ac.uk/"><img src="{{ STATIC_URL }}desktop/png/jisc-logo-small.png" width="88" height="46" alt="Joint Information Systems Committee" /></a>
 </div>
 
 <div class="span-14 append-1">
