--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -10,7 +10,7 @@
 {% block header %}
 <div id="index-header">
     <div id="index-title">
-		{% ifequal style_group "groups-dumb" %}
+		{% ifequal style_group "dumb" %}
 		    <img width="90" height="55" src="{{ STATIC_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
 		{% else %}
 		{% if is_christmas %}
@@ -25,7 +25,7 @@
 	     <form method="get" action="{% url search:index %}">
 		 <p>
 			{{ search_form.query }}
-		{% ifequal style_group "groups-dumb" %}
+		{% ifequal style_group "dumb" %}
 		    <input type="button" value="Search" />
 		{% else %}
 			<input type="image" src="{{ STATIC_URL }}site/png/new/buttons/search-button.png" title="Search" alt="Search"/>
@@ -102,7 +102,7 @@
     </ul>
 
     <div class="center">
-        {% ifequal style_group "groups-dumb" %}
+        {% ifequal style_group "dumb" %}
             Produced by Oxford University Computing Services <br /><a href="http://www.oucs.ox.ac.uk">www.oucs.ox.ac.uk</a>
         {% else %}
     <div class="content" style="margin:8px;">
