--- a/molly/apps/webcams/templates/webcams/webcam_detail.html
+++ b/molly/apps/webcams/templates/webcams/webcam_detail.html
@@ -18,7 +18,7 @@
 		<h2>{{ webcam.title }}<br /><small>{% now "G:i "%}</small></h2>
 
 {% if eis %}
-    {% ifnotequal style_group "groups-dumb" %}
+    {% ifnotequal style_group "dumb" %}
         <div class="backgrounded-image" style="background-image:url('{{ eis.get_absolute_url }}'); height:{{ eis.height }}px;"> </div>
       {% else %}
         <img src="{{ eis.get_absolute_url }}" alt="Webcam Image">
