--- a/molly/maps/templates/maps/embed.html
+++ b/molly/maps/templates/maps/embed.html
@@ -1,5 +1,5 @@
 {% load molly_utils %}
-{% ifnotequal style_group "groups-dumb" %}
+{% ifnotequal style_group "dumb" %}
     {% if device|device_has_parent:"generic_web_browser" or device.pointing_method == "touchscreen" and use_javascript and device.device_os != "Symbian" and device.device_os != "Symbian OS" %}
         <div class="slippy-map">
             <iframe width="{{ map.width|add:"-60" }}" height="{{ map.height }}" frameborder="0" class="map"
