Check if the end of a file is indeed "Park and Ride"

--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -85,7 +85,7 @@ ul li.transport-link a img { border: 0; }
   <div class="section-content" style="color:#000;">
     {% for entity in park_and_rides.entities %}
     <div style="width: 50%;{% if not forloop.last or forloop.counter|divisibleby:2 %} float: left;{% endif %} margin: 3px auto 3px auto;{% if not forloop.counter|divisibleby:2 %} clear: left;{% endif %}">
-      <h3><a href="{{ entity.get_absolute_url}}" style="color:#000;">{{ entity.title|slice:":-14" }}</a></h3>
+      <h3><a href="{{ entity.get_absolute_url}}" style="color:#000;">{% ifequal entity.title|slice:"-13:" "Park and Ride" %}{{ entity.title|slice:":-14" }}{% else %}{{ entity.title }}{% endifequal %}</a></h3>
       {{ entity.metadata.unavailable }}
       {% if not entity.metadata.park_and_ride.unavailable %}
       <div style="width:90%;border: 1px solid #7c7c7c;height: 7px; background-color:#39d93c;margin: 5px auto;">
