Removed Mobile Oxford from most templates in mollyproject/molly

--- a/molly/apps/feature_vote/templates/feature_vote/index.html
+++ b/molly/apps/feature_vote/templates/feature_vote/index.html
@@ -7,7 +7,7 @@
 {% if submitted %}
   <p><strong>Thank you for submitting a feature request! It is pending moderation, and should appear shortly.</strong></p>
 {% else %}
-  <p>Do you have something you'd like to see added to Mobile Oxford?</p>
+  <p>Do you have something you'd like to see added to {{ service_name }}?</p>
   
   <p>You can vote or comment on existing suggestions, or use the <a href="#submit-feature">form at the bottom of the page</a> to add a new suggestion.</p>
 {% endif %}
