--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -11,7 +11,7 @@
     <h2>Messages from the developers</h2>
   </div>
   <div class="section-content"><div class="note"><div class="bubble pad-10">
-    The developers would like to thank you for using Mobile Oxford,
+    The developers would like to thank you for using {{ service_name }},
     and would like to ask your help in making it better.
   </div></div>
 
