--- a/molly/apps/places/templates/places/update_osm_done.html
+++ b/molly/apps/places/templates/places/update_osm_done.html
@@ -12,7 +12,7 @@
   <div class="section-content" style="text-align:left;">
     <p>
       Your changes have been submitted and will be checked shortly. Thank you
-      for contributing to both Mobile Oxford and OpenStreetMap!
+      for contributing to both {{ service_name }} and OpenStreetMap!
     </p>
     
     <p>
