--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -5,18 +5,18 @@
 {% block site_title %}{% endblock %}
 {% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
 
-{% block title %}Mobile Oxford{% endblock %}
+{% block title %}{{ service_name }}{% endblock %}
 
 {% block header %}
 <div id="index-header">
     <div id="index-title">
 		{% ifequal style_group "dumb" %}
-		    <img width="90" height="55" src="{{ STATIC_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
+		    <img width="90" height="55" src="{{ STATIC_URL }}site/png/new/logos/logo-90x55.jpg" alt="{{ service_name }}">
 		{% else %}
 		{% if is_christmas %}
-            <img width="128" height="51" src="{{ STATIC_URL }}site/png/new/logos/logo-128x51-TRMargin-5px-christmas.png" alt="Mobile Oxford"/>
+            <img width="128" height="51" src="{{ STATIC_URL }}site/png/new/logos/logo-128x51-TRMargin-5px-christmas.png" alt="{{ service_name }}"/>
 		{% else %}
-	    <img width="128" height="51" src="{{ STATIC_URL }}site/png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
+	    <img width="128" height="51" src="{{ STATIC_URL }}site/png/new/logos/logo-128x51-TRMargin-5px.png" alt="{{ service_name }}"/>
 		{% endif %}
         {% endifequal %}
     </div>
