--- a/molly/templates/admin/base_site.html
+++ b/molly/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 {% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">{% trans 'Mobile Oxford Administration' %}</h1>
+<h1 id="site-name">{% trans '{{ service_name }} Administration' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
