Renamed SERVICE_NAME to SITE_NAME to avoid clashing with oauth template tag of same name. changes templates and settings.py, configurator and docs to match

--- a/molly/auth/templates/auth/oauth/authorize.html
+++ b/molly/auth/templates/auth/oauth/authorize.html
@@ -9,7 +9,7 @@
   
   <div class="section-content">
     <p style="font-size:1.2em">
-      This page provides information from {{ service_name }}, requiring you to allow access from {{ service_name }} to your {{ service_name }} account.
+      This page provides information from {{ service_name }}, requiring you to allow access from Mobile Oxford to your {{ service_name }} account.
     </p>
     <p style="font-size:1.2em">
       Select <strong>Proceed&hellip;</strong> to be redirected to
@@ -18,11 +18,11 @@
       <strong>Cancel</strong>.
     </p>
     <p>
-      To revoke access from {{ service_name }} in the future, head to <em>Trusted
+      To revoke access from Mobile Oxford in the future, head to <em>Trusted
       Applications</em> within <em>My Workspace</em> in {{ service_name }}.
       If you wish to remove access from one of your devices, head to
       <em>Security preferences</em> at the bottom of any authenticated page
-      on {{ service_name }}.
+      on Mobile Oxford.
     </p>
     
     <div class="button">
