--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -18,3 +18,15 @@
 	  </td>
 	</tr>
 {% endblock %}
+{% block below-about %}
+    <div class="center">
+        {% ifequal style_group "dumb" %}
+            Produced by Oxford University Computing Services <br /><a href="http://www.oucs.ox.ac.uk">www.oucs.ox.ac.uk</a>
+        {% else %}
+    <div class="content" style="margin:8px;">
+        <img width="140" height="46" src="{{ STATIC_URL }}site/png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
+        <img width="141" height="46" src="{{ STATIC_URL }}site/gif/brandmark.gif" alt="University of Oxford" />
+    </div>
+        {% endifequal %}
+    </div>
+{% endblock %}
