--- a/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/apps/contact/templates/contact/result_list.html
@@ -9,6 +9,7 @@
 {% include "contact/search_form.html" %}
 
 {% if form.is_valid %}
+<div class="section">
   <div class="header">
     <h2>Results</h2>
   </div>
@@ -64,7 +65,7 @@
       </div>
     {% endif %}
     </div>
-
+</div>
 {% endif %}
 
 {% endblock %}
