moved transport app svgs into appropriate images folder

--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -57,13 +57,13 @@ ul li.transport-link a img { border: 0; }
 {% if device|device_has_parent:"apple_generic" or browser.svgt_1_1 %}
 <ul id="transport-links">
 	<li class="transport-link">
-		<a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/svg/pride.svg" alt="Park and Rides" width="48" height="48" /></a></li>
+		<a href="#park_and_rides"><img src="{{ STATIC_URL }}transport/images/pride.svg" alt="Park and Rides" width="48" height="48" /></a></li>
 	<li class="transport-link">
-		<a href="#bus"><img src="{{ STATIC_URL }}transport/svg/bus.svg" alt="Bus Stops" width="48" height="48" /></a></li>
+		<a href="#bus"><img src="{{ STATIC_URL }}transport/images/bus.svg" alt="Bus Stops" width="48" height="48" /></a></li>
 	<li class="transport-link">
-		<a href="#ldb"><img src="{{ STATIC_URL }}transport/svg/train.svg" alt="Train Departure Boards" width="48" height="48" /></a></li>
+		<a href="#ldb"><img src="{{ STATIC_URL }}transport/images/train.svg" alt="Train Departure Boards" width="48" height="48" /></a></li>
 	<li class="transport-link">
-		<a href="#travel_news"><img src="{{ STATIC_URL }}transport/svg/warn.svg" alt="Travel News" width="48" height="48" /></a></li>
+		<a href="#travel_news"><img src="{{ STATIC_URL }}transport/images/warn.svg" alt="Travel News" width="48" height="48" /></a></li>
 </ul>
 {% else %}
 <ul id="transport-links">
